tests/snapshots/test_runner__tests__compiler__typecheck__type_annotation_integer_1__type_annotation_integer_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let a: Int = 1
let b: Int = 1.0

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_integer_1/type_annotation_integer_1.kk:2:14
  │
2 │ let b: Int = 1.0
  │              ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Int         | + Float     |
    +---------------+-------------+
